--- a/deks-merek-pondokcabe.html
+++ b/deks-merek-pondokcabe.html
@@ -66,14 +66,14 @@
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
                         <div class="col-lg-6 text-center ">
-                            <img class="img-fluid animated zoomIn" src="img/wizz_bite.png" alt="">
+                            <img class="img-fluid animated zoomIn" src="img/pondokcabe.png" alt="">
                         </div>
                         <div class="col-lg-6 text-center ">
-                            <h1 class="text-white mb-4 slideInDown">Wizz Bites</h1>
+                            <h1 class="text-white mb-4 slideInDown">Pondok Cabe</h1>
                             <nav caria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item text-white"><a class="breadcrumb-item" href="merek.html">Merek</li></a>
-                                    <li class="breadcrumb-item text-white"><a class="breadcrumb-item active" href="deks-merek-wizzbite.html">Wizz Bites</li></a>
+                                    <li class="breadcrumb-item text-white"><a class="breadcrumb-item active" href="deks-merek-pondokcabe.html">Pondok Cabe</li></a>
                                 </ol>
                             </nav>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
@@ -90,58 +90,144 @@
                 <div class="row base-dekripsi detail" id="01">
                     <div class="base col-md-4">
                         <div class="base-body align-items-center">
-                            <img class="img-fluid" src="img/wizz_bite_chicken nugget original.jpg">
+                            <img class="img-fluid" src="img/pondok_cabe_cireng putih.jpg">
                         </div>
                     </div>
                     <div class="base col-md-8 dekripsi-konten">
-                        <h3 class="text-white text-capitalize">Wizz Bites - Chicken Nugget Original</h3>
+                        <h3 class="text-white text-capitalize">Cireng Putih</h3>
                         <div class="content">
-                            Nugget ayam premium yang diproduksi dari 100% daging dada ayam segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat.
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat
                         </div>
-                        <div class="content">Berat: 250 gr</div>
+                        <div class="content">Berat: 200 gr</div>
                     </div>
                 </div>
                 <div class="row base-dekripsi detail" id="02">
                     <div class="base col-md-4">
                         <div class="base-body align-items-center">
-                            <img class="img-fluid" src="img/wizz_bites_chicken nugget cheese.png">
+                            <img class="img-fluid" src="img/pondok_cabe_cireng mercon.jpg">
                         </div>
                     </div>
                     <div class="base col-md-8 dekripsi-konten">
-                        <h3 class="text-white text-capitalize">Wizz Bites - Chicken Nugget Cheese</h3>
+                        <h3 class="text-white text-capitalize">Cireng Mercon</h3>
                         <div class="content">
                             Nugget ayam premium yang diproduksi dari 100% daging dada ayam segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat.
                         </div>
-                        <div class="content">Berat: 250 gr</div>
+                        <div class="content">
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat
+                        </div>
+                        <div class="content">Berat: 200 gr</div>
                     </div>
                 </div>
                 <div class="row base-dekripsi detail" id="03">
                     <div class="base col-md-4">
                         <div class="base-body align-items-center">
-                            <img class="img-fluid" src="img/wizz_bites_chicken nugget spicy.png">
+                            <img class="img-fluid" src="img/pondok_cabe_cireng crispy.jpg">
                         </div>
                     </div>
                     <div class="base col-md-8 dekripsi-konten">
-                        <h3 class="text-white text-capitalize">Wizz Bites - Chicken Nugget Spicy</h3>
+                        <h3 class="text-white text-capitalize">Cireng Crispy</h3>
                         <div class="content">
-                            Nugget ayam premium yang diproduksi dari 100% daging dada ayam segar pilihan serta diolah secara higienis tanpa pengawet, pewarna buatan, dan MSG sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat.
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat
                         </div>
-                        <div class="content">Berat: 250 gr</div>
+                        <div class="content">Berat: 200 gr</div>
                     </div>
                 </div>
                 <div class="row base-dekripsi detail" id="04">
                     <div class="base col-md-4">
                         <div class="base-body align-items-center">
-                            <img class="img-fluid" src="img/wizz_bite_siomay ayam.jpg">
+                            <img class="img-fluid" src="img/pondok_cabe_rujak cireng.jpg">
                         </div>
                     </div>
                     <div class="base col-md-8 dekripsi-konten">
-                        <h3 class="text-white text-capitalize">Wizz Bite - Siomay</h3>
+                        <h3 class="text-white text-capitalize">Rujak Cireng</h3>
                         <div class="content">
-                            Siomay ayam premium yang diproduksi dari bahan baku segar pilihan serta diolah secara higienis tanpa pengawet dan pewarna buatan sehingga mengasilkan makanan yang praktis, halal, sehat, dan nikmat.
-                            Dilengkapi saus sambal di dalam kemasan.
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat. Dilengkapi bumbu rujak di dalam kemasan.
                         </div>
-                        <div class="content">Berat: 250 gr</div>
+                        <div class="content">Berat: 400 gr</div>
+                    </div>
+                </div>
+                <div class="row base-dekripsi detail" id="05">
+                    <div class="base col-md-4">
+                        <div class="base-body align-items-center">
+                            <img class="img-fluid" src="img/pondok_cabe_cilor.jpg">
+                        </div>
+                    </div>
+                    <div class="base col-md-8 dekripsi-konten">
+                        <h3 class="text-white text-capitalize">Cilor</h3>
+                        <div class="content">
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat. Dilengkapi saus sambal di dalam kemasan.
+                        </div>
+                        <div class="content">Berat: 300 gr</div>
+                    </div>
+                </div>
+                <div class="row base-dekripsi detail" id="06">
+                    <div class="base col-md-4">
+                        <div class="base-body align-items-center">
+                            <img class="img-fluid" src="img/pondok_cabe_cilok bumbu kacang.jpg">
+                        </div>
+                    </div>
+                    <div class="base col-md-8 dekripsi-konten">
+                        <h3 class="text-white text-capitalize">Cilok Bumbu Kacang</h3>
+                        <div class="content">
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat. Dilengkapi bumbu kacang di dalam kemasan.
+                        </div>
+                        <div class="content">Berat: 400 gr</div>
+                    </div>
+                </div>
+                <div class="row base-dekripsi detail" id="07">
+                    <div class="base col-md-4">
+                        <div class="base-body align-items-center">
+                            <img class="img-fluid" src="img/pondok_cabe_baso aci.png">
+                        </div>
+                    </div>
+                    <div class="base col-md-8 dekripsi-konten">
+                        <h3 class="text-white text-capitalize">Baso Aci</h3>
+                        <div class="content">
+                            Makanan tradisional berbahan dasar tepung sagu (aci) yang diracik dari resep istimewa sehingga mengasilkan kudapan yang praktis, halal, dan nikmat. Berisi baso aci, tahu dan somay kering, pilus cikur, dilengkapi bumbu kering, sambal, dan jeruk limo di dalam kemasan.
+                        </div>
+                        <div class="content">Berat: 100 gr</div>
+                    </div>
+                </div>
+                <div class="row base-dekripsi detail" id="08">
+                    <div class="base col-md-4">
+                        <div class="base-body align-items-center">
+                            <img class="img-fluid" src="img/pondok_cabe_sambal hitam pucung.jpg">
+                        </div>
+                    </div>
+                    <div class="base col-md-8 dekripsi-konten">
+                        <h3 class="text-white text-capitalize">Sambal Hitam Pucung</h3>
+                        <div class="content">
+                            Olahan rempah yang diproduksi dari bahan baku segar pilihan serta diracik dari resep istimewa sehingga mengasilkan sambal yang praktis, halal, dan nikmat yang memanjakan selera.
+                        </div>
+                        <div class="content">Berat: 140 gr</div>
+                    </div>
+                </div>
+                <div class="row base-dekripsi detail" id="09">
+                    <div class="base col-md-4">
+                        <div class="base-body align-items-center">
+                            <img class="img-fluid" src="img/pondok_cabe_sambal merah jambal.jpg">
+                        </div>
+                    </div>
+                    <div class="base col-md-8 dekripsi-konten">
+                        <h3 class="text-white text-capitalize">Sambal Merah Jambal</h3>
+                        <div class="content">
+                            Olahan rempah yang diproduksi dari bahan baku segar pilihan serta diracik dari resep istimewa sehingga mengasilkan sambal yang praktis, halal, dan nikmat yang memanjakan selera.
+                        </div>
+                        <div class="content">Berat: 140 gr</div>
+                    </div>
+                    <div class="row base-dekripsi detail" id="010">
+                        <div class="base col-md-4">
+                            <div class="base-body align-items-center">
+                                <img class="img-fluid" src="img/pondok_cabe_bas.png">
+                            </div>
+                        </div>
+                        <div class="base col-md-8 dekripsi-konten">
+                            <h3 class="text-white text-capitalize">Sambal Merah Jambal</h3>
+                            <div class="content">
+                                Olahan rempah yang diproduksi dari bahan baku segar pilihan serta diracik dari resep istimewa sehingga mengasilkan sambal yang praktis, halal, dan nikmat yang memanjakan selera.
+                            </div>
+                            <div class="content">Berat: 140 gr</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -153,39 +239,87 @@
                     <div class="row g-4">
                         <div class="col-lg-3 col-md-6">
                             <div class="product-item d-flex flex-column text-center button" id="01">
-                                    <img class="img-fluid w-100 " src="img/wizz_bite_chicken nugget original.jpg"> 
-                                    <div class="product-item label">
-                                        Chicken Nugget Original
-                                    </div>
-                                </div> 
-                            </div>
+                                <img class="img-fluid w-100 " src="img/pondok_cabe_cireng putih.jpg"> 
+                                <div class="product-item label">
+                                    Cireng Putih
+                                </div>
+                            </div> 
+                        </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="product-item d-flex flex-column text-center button" id="02">
-                                    <img class="img-fluid w-100 " src="img/wizz_bites_chicken nugget cheese.png"> 
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_cireng mercon.jpg"> 
                                     <div class="product-item label">
-                                        Chicken Nugget Cheese
+                                        Cireng Mercon
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="product-item d-flex flex-column text-center button" id="03">
-                                    <img class="img-fluid w-100 " src="img/wizz_bites_chicken nugget cheese.png"> 
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_cireng crispy.jpg"> 
                                     <div class="product-item label">
-                                        Chicken Nugget Spicy
+                                        Cireng Crispy
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="product-item d-flex flex-column text-center button" id="04">
-                                    <img class="img-fluid w-100 " src="img/wizz_bite_siomay ayam.jpg"> 
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_rujak cireng.jpg"> 
                                     <div class="product-item label">
-                                        Siomay
+                                        Rujak Cireng
                                     </div>
                                 </div>
-                            </di>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="05">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_cilor.jpg"> 
+                                    <div class="product-item label">
+                                        Cilor
+                                    </div>
+                                </div> 
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="06">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_cilok bumbu kacang.jpg"> 
+                                    <div class="product-item label">
+                                        Cilok Bumbu Kacang
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="07">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_baso aci.png"> 
+                                    <div class="product-item label">
+                                        Baso Aci
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="08">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_sambal hijau jambrong.jpg"> 
+                                    <div class="product-item label">
+                                        Sambal Hijau Jambrong
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="09">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_sambal hitam pucung.jpg"> 
+                                    <div class="product-item label">
+                                        Sambal Hitam Jambrong
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="product-item d-flex flex-column text-center button" id="10">
+                                    <img class="img-fluid w-100 " src="img/pondok_cabe_sambal merah jambal.jpg"> 
+                                    <div class="product-item label">
+                                        Sambal Merah Jambal
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+               </div>
             </div>     
             <!-- Footer Start -->
             <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
