--- a/merek.html
+++ b/merek.html
@@ -105,7 +105,7 @@
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/wizz_bite.png" alt="">
-                                <a href="deks-merek-wizzbite.html">
+                                <a href="deks-merek-wizzsausage.html">
                                     <div class="portfolio-overlay"></div>
                                 </a>
                             </div>
@@ -131,10 +131,9 @@
                         <div class="rounded overflow-hidden">
                             <div class="position-relative overflow-hidden">
                                 <img class="img-fluid w-100" src="img/pondokcabe.png" alt="">
-                                <div class="portfolio-overlay">
-                                    <a class="btn btn-square btn-outline-light mx-1" href="img/portfolio-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                                    <a class="btn btn-square btn-outline-light mx-1" href=""><i class="fa fa-link"></i></a>
-                                </div>
+                                <a href="deks-merek-pondokcabe.html">
+                                    <div class="portfolio-overlay"></div>
+                                </a>
                             </div>
                             <div class="bg-light p-4">
                                 <h5 class="lh-base mb-0">Pondok Cabe</a>
